# say_data

./: .gitignore  Cargo.toml  Config.toml  LICENSE  flake.nix  test
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 38rzi6kzh5ilbpdgpvd8aj34vksgkcfa-source  4hn2s6jrxcyljml46mkgd3z7fxrwikq4-source  5nycg8bfgmhi4n4mpxvyrrb5ygamdhwx-source  fv7s6wfk9l4zhrxxsi30q3qp4rivs16q-source  n7bqvdxxrnh6nwn3bx0jb7wfw34lzkxz-source  s3wnca6gn05fgg8bkriqzp4cymm4a24p-source
assets/nba/data/sql/: player_impact.pgsql  player_stats.pgsql
assets/nba/export/Views/: Advanced.dax  nba.pbix
config/: alias.toml  flake.toml  rust-toolchain
docs/nba/: Insights.md  README.md
scripts/: CrunQ  alias  autostart  clap-derive  cwr  git-example  ide  init_auth  pSQLer  psq  psq1  versions
src/: main.rs
src/app/: config.rs  mod.rs  output.rs  status.1.rs  status.2.rs  status.rs
src/server/: check.1.rs  check.rs  db.rs  init.rs  mod.rs  output.rs  reset.rs  start.rs  stop.rs
src/tests/: function_output.rs  function_status.rs
src/tools/: case.rs  exit.rs  get.rs  init.rs  mod.rs  say.rs  set_bin.rs
