[package]
name = "bi_portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
] }
clap = { version = "4.2.1", features = ["derive"] }
users = "0.11.0"
toml = "0.7.3"
# walkdir = "2.3.3"
# prettytable = "0.10.0"
# polars = { version = "0.28.0", features = ["lazy", "describe"] }
# chrono = "0.4.24"
# sysinfo = "0.28.4"

[toolchain]
# profile = "minimal"
channel = "nightly" #"nightly-2023-03-30"
components = [
  "rustc",
  "cargo",
  "rustfmt",
  "rust-analyzer",
  "rust-src",
  "clippy",
  # "miri",
  # "rustc-dev",
  "llvm-tools-preview",
]
targets = [
  "wasm32-unknown-unknown",
  # "x86_64-unknown-linux-musl",
  # "x86_64-unknown-linux-gnu",
  # "aarch64-unknown-linux-musl",
]
